# solana-nft-staking

./: .editorconfig  Anchor.toml  README.md  package-lock.json  package.json
programs-native/native-nft-staking/: processor.rs
programs/lootbox-program/: Cargo.toml
programs/lootbox-program/src/: lib.rs
programs/lootbox-program/src/instructions/: consume_randomness.rs  init_user.rs  open_lootbox.rs  retrieve_item.rs
programs/lootbox-program/v1/: lib.rs
programs/native-nft-staking/: state.rs
programs/solana-nft-staking/: Cargo.toml
programs/solana-nft-staking/src/: lib.rs
tests/: solana-nft-staking.ts  solana-staking-lootbox.ts
tests/utils/: setupNft.ts  setupSwitchboard.ts
